--- a/views/saleslist.pug
+++ b/views/saleslist.pug
@@ -1,41 +1,35 @@
 doctype html
-html
-  head
-    meta(charset='UTF-8')
-    meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    title Sales Display
-    link(rel='stylesheet' href='/css/saleslist.css')
-  body
-    h2 Sales Display
-
-    table
-      thead
-        tr
-          th Product Name
-          th Quantity
-          th Price per Unit
-          th Total Sales
-          th Customer Name
-          th Actions
-      tbody#salesTable
-        if sales.length
-          each sale in sales
-            tr
-              td #{sale.ProductName}
-              td #{sale.Quantity}
-              td #{sale.PriceperUnit}
-              td #{sale.TotalSales}
-              td #{sale.CustomerName}
-              td
-                a.btn.btn-primary(href="/updateSale/" + sale._id) Update
-                form(action="/sales/deleteSale/" method="post")
-                  input(type="hidden" name="id" value=sale._id)
-                  button.btn.btn-danger(type="submit") Delete
-        else
-          tr
-            td(colspan='6') No sales available.
-
-    br
-
-    // Link to Add Sale Form Route (No JS)
-    a.btn.btn-success(href='/') Add New Sale
+head
+  meta(charset='UTF-8')
+  meta(name='viewport' content='width=device-width, initial-scale=1.0')
+  title Sales Table
+  link(rel='stylesheet' href='/public/css/saleslist.css')
+h2 Sales list
+table#salesTable
+  thead
+    tr
+      th Produce Name
+      th Tonnage (kg)
+      th Amount Paid (UGX)
+      th Buyer Name
+      th Sales Agent
+      th Date and Time
+      th Actions
+  tbody
+    tr
+      td #{sale.produceName} 
+      td #{sale.tonnage}
+      td #{sale.amountPaid}
+      td #{sale.BuyerName}
+      td #{sale.SalesAgent}
+      td #{sale.saleDatetime}
+      
+      td
+        button(onclick='editSale(this)') Edit
+        button(onclick='deleteSale(this)') Delete
+// Add Sale Button below the table
+button(onclick='addSale()') Add Sale
+// Footer Section at the bottom of the page
+footer
+  p &copy; 2025 Sales Management System | All Rights Reserved
+script(src='saleslist.js')
