my css staarted loading

--- a/views/AddProduceSale.pug
+++ b/views/AddProduceSale.pug
@@ -28,4 +28,4 @@ form#producesalesform( action='/AddProduceSale' method='POST')
   input#saleDateTime(type='datetime-local' name='saleDateTime' required='')
   // Submit Button
   button(type='submit') Submit Sale
-script(src='addproducesale.js')
+script(src='js/addproducesale.js')
