--- a/views/addprocurement.pug
+++ b/views/addprocurement.pug
@@ -3,7 +3,7 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Produce Procurement Form
-  link(rel='stylesheet' href='/css/addprocurement.css')
+  link(rel='stylesheet' href='./css/addprocurement.css')
   body
 .form-container
   h2 Produce Procurement Form
@@ -43,4 +43,4 @@ head
       input#time(type='time' name='time')
     button(type='submit') Submit
     p#errorMsg.error
-script(src='addprocurement.js')
+script(src='js/addprocurement.js')
