--- a/views/directorsDashboard.pug
+++ b/views/directorsDashboard.pug
@@ -2,7 +2,7 @@ doctype html
 head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Karibu Grocery - Director Dashboard
+  title Director's Dashboard
   link(rel='stylesheet' href='/css/directorsDashboard.css')
   link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css' integrity='sha512-yHjM9l+kdf0+OPQWnryYfYp0FPhWZKnHcEf6vhc3D+Z6Z+GULe+a4Uez7Gxy0zTRNPn0a+ebpuOj6lA7szOKVQ==' crossorigin='anonymous' referrerpolicy='no-referrer')
 #sidebar.sidebar
@@ -10,16 +10,16 @@ head
   a(href='#')
     i.fas.fa-tachometer-alt
     |  Dashboard
-  a(href='#')
+  a(href='/produceSale')
     i.fas.fa-chart-line
     |  Sales
-  a(href='#')
+  a(href='/produceProcurement')
     i.fas.fa-boxes
     |  Inventory
-  a(href='#')
+  a(href='/CreditSalesList')
     i.fas.fa-users
     |  Customers
-  a(href='#')
+  a(href='logout')
     i.fas.fa-coins
     |  Finance
   a(href='#')
@@ -31,11 +31,11 @@ head
 #main.main-content
   button.toggle-btn(onclick='toggleSidebar()') &#x2630;
   header
-    h1 Karibu Grocery Store - Director&apos;s Dashboard
+    h1 Director&apos;s Dashboard
   .container
     .card
       h3 Daily Sales
-      #dailySales.value Loading...
+      #dailySales.value 
     .card
       h3 Top-Selling Products
       ul#topProducts
@@ -44,17 +44,17 @@ head
       ul#lowStock
     .card
       h3 Customer Satisfaction Score
-      #satisfaction.value Loading...
+      #satisfaction.value Loading
     .card
       h3 Gross Profit Margin
-      #grossProfit.value Loading...
+      #grossProfit.value Loading
     .card
-      h3 Outstanding Payments
-      #payments.value Loading...
+      h3 produceSalesList 
+      #produceSaleList.value 
     .card
       h3 Employee Attendance
-      #attendance.value Loading...
+      #attendance.value 
     .card
-      h3 Promotion Campaign Performance
-      #campaign.value Loading...
+      h3 logout 
+      #logout.value 
 script(src='directorsDashboard.js')
