--- a/views/salesAgentDashboard1.pug
+++ b/views/salesAgentDashboard1.pug
@@ -19,7 +19,7 @@ head
         a(href='#') Profile
   main.content
     header
-      h1 Welcome, Sales Agent
+      h1 Welcome, Sales Agent Dashboard Maganjo
     section.stats
       .stat-box
         | Leads: 
@@ -48,7 +48,4 @@ head
           td faithchiru@gmail.com
           td In Progress
           td shs70000
-    .chart-container
-      h2 Sales Performance
-      canvas#salesChart
 script(src='js/salesAgentDashboard.js')
