--- a/public/css/Login.css
+++ b/public/css/Login.css
@@ -8,7 +8,7 @@
   }
   
   form#loginForm {
-    background:  rgb(216, 181, 181);
+    background-color: rgba(42, 157, 143, 0.5);
     padding: 30px 40px;
     border-radius: 12px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -56,8 +56,8 @@
   .login-btn {
     width: 100%;
     padding: 12px;
-    background: brown;
-    color: white;
+    background: white;
+    color: black;
     font-size: 16px;
     border: none;
     border-radius: 8px;
