--- a/public/css/salesAgentDashboard.css
+++ b/public/css/salesAgentDashboard.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     display: flex;
-    background-image: url('../img/home.jpg');
+    background-image: url('../img/index3.jpg');
 }
 .dashboard {
     display: flex;
@@ -11,7 +11,7 @@ body {
 }
 .sidebar {
     width: 250px;
-    background-color: black;
+    background-color: #146158 ;
     color: white;
     padding: 20px;
     height: 100vh;
@@ -44,7 +44,7 @@ body {
     gap: 20px;
 }
 .stat-box {
-    background: brown;
+    background: white;
     padding: 20px;
     border-radius: 5px;
     flex: 1;
@@ -59,7 +59,7 @@ table {
     border-collapse: collapse;
 }
 th, td {
-    border: 1px solid brown;
+    border: 1px solid white;
     padding: 8px;
     text-align: left;
 }
