--- a/views/Addstock.pug
+++ b/views/Addstock.pug
@@ -4,8 +4,8 @@ html
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     title Add Stock
-    link(rel='stylesheet' href='/bootstrap-5.0.2-dist/css/bootstrap.css')
-    link(rel='stylesheet' href='/css/addstock.css')
+    link(rel='stylesheet', href='/css/addstock.css')
+    link(rel='stylesheet' href='/bootstrap-5.0.2-dist/css/bootstrap.css') 
   body
     header.bg-dark.text-light.py-3
       h1.text-center Add New Stock
@@ -13,15 +13,15 @@ html
         a(href='/stocklist' class='btn btn-light') Back to Stock List
 
     main.container.my-4
-      form#addStockForm(method='POST', action='/addstock')
+      form#addStockForm(action='/addstock' method='POST')
         .mb-3
           label(for='produceName' class='form-label') Produce Name
           input(type='text', class='form-control', id='produceName', name='produceName')
           span#error-produceName.error-message
         .mb-3
-          label(for='typeOfProduce' class='form-label') Type of Produce
-          input(type='text', class='form-control', id='typeOfProduce', name='typeOfProduce')
-          span#error-typeOfProduce.error-message
+          label(for='produceType' class='form-label') Type of Produce
+          input(type='text', class='form-control', id='produceType', name='produceType')
+          span#error-produceType.error-message
         .mb-3
           label(for='tonnage' class='form-label') Tonnage (kg)
           input(type='number', class='form-control', id='tonnage', name='tonnage')
@@ -43,17 +43,17 @@ html
           input(type='text', class='form-control', id='contact', name='contact')
           span#error-contact.error-message
         .mb-3
-          label(for='priceToSell' class='form-label') Price to Sell
-          input(type='number', class='form-control', id='priceToSell', name='priceToSell')
-          span#error-priceToSell.error-message
+          label(for='sellingPrice' class='form-label') Selling Price
+          input(type='number', class='form-control', id='sellingPrice', name='sellingPrice')
+          span#error-sellingPrice.error-message
         .mb-3
-          label(for='stockDate' class='form-label') Stock Date
-          input(type='date', class='form-control', id='stockDate', name='stockDate')
-          span#error-stockDate.error-message
+          label(for='Date' class='form-label')  Date
+          input(type='date', class='form-control', id='Date', name='Date')
+          span#error-Date.error-message
         .mb-3
-          label(for='stockTime' class='form-label') Stock Time
-          input(type='time', class='form-control', id='stockTime', name='stockTime')
-          span#error-stockTime.error-message
-        button(type='submit', class='btn btn-primary' style="width: 400px;") Add Stock
+          label(for='Time' class='form-label') Time
+          input(type='time', class='form-control', id='Time', name='Time')
+          span#error-Time.error-message
+        button(type='submit', class='btn btn-primary' me-2 style="width: 400px;") Add Stock
          a.btn.btn-secondary(href="/stocklist") Back to Stocklist
     script(src='/js/addstock.js')
