--- a/views/managersDashboard1.pug
+++ b/views/managersDashboard1.pug
@@ -26,7 +26,7 @@ head
   main.main-content
     header
       .header-container
-        h1 Manager&apos;s Dashboard
+        h1 Manager&apos;s Dashboard Maganjo
         .notification-area
           // Notification Bell
           .notification-bell(onclick='toggleNotifications()')
