--- a/views/stocklist.pug
+++ b/views/stocklist.pug
@@ -5,7 +5,7 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     title Stock List
     link(rel='stylesheet' href='/bootstrap-5.0.2-dist/css/bootstrap.css')
-    link(rel='stylesheet' href='/css/saleslist.css')
+    link(rel='stylesheet' href='/css/a.css')
   body
     header.bg-dark.text-light.py-3
       h1.text-center Stock List
@@ -19,15 +19,15 @@ html
         thead
           tr
             th(scope='col') Produce Name
-            th(scope='col') Type of Produce
+            th(scope='col') Produce Type
             th(scope='col') Tonnage
             th(scope='col') Cost
             th(scope='col') Dealer Name
             th(scope='col') Branch Name
             th(scope='col') Contact
-            th(scope='col') Price to Sell
-            th(scope='col') Stock Date
-            th(scope='col') Stock Time
+            th(scope='col') Selling Price
+            th(scope='col') Date
+            th(scope='col') Time
             th(scope='col') Actions
                
         tbody
@@ -35,19 +35,19 @@ html
             each stock in stocks
               tr
                 td #{stock.produceName}
-                td #{stock.typeOfProduce}
+                td #{stock.produceType}
                 td #{stock.tonnage}
                 td #{stock.cost}
                 td #{stock.dealerName}
                 td #{stock.branchName}
                 td #{stock.contact}
-                td #{stock.priceToSell}
-                td #{stock.stockDate}
-                td #{stock.stockTime}
+                td #{stock.sellingPrice}
+                td #{stock.Date}
+                td #{stock.Time}
                     
                 td
                   // Update Button
-                  a.btn.btn-primary.btn-sm(href=/updatestock/${stock._id}) Update
+                  a.btn.btn-primary.btn-sm(href='/updatestock/' + stock._id) Update
 
                   // Delete Form
                   form(method='POST' action='/delete-stock' style='display:inline;')
