--- a/views/addprocurement.pug
+++ b/views/addprocurement.pug
@@ -28,7 +28,7 @@ head
       input#dealerName(type='text' name='dealerName')
     .form-group
       label(for='branchName') Branch Name
-      select#branchName(name='branchName' required='')
+      select#branchName(name='branchName')
         option(value='') Select Branch
         option(value='Mattuga') Mattuga
         option(value='Maganjo') Maganjo
