--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,7 @@ html(lang="en")
   head
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title Happy Hoe Grocery Ltd.
+    title Karibu Grocery Limited
     // Stylesheets
     link(rel='stylesheet', href='bootstrap-5.0.2-dist/bootstrap-5.0.2-dist/css/bootstrap.css')
     link(rel='stylesheet', href='/css/home.css')
@@ -11,7 +11,7 @@ html(lang="en")
   // Main Content
   main.d-flex.flex-column.justify-content-center.align-items-center.text-center
     section.hero-container.py-5
-      .hero-content
+      .hero-content.container
         h1 Welcome to Karibu Grocery Ltd.
         p.lead Your trusted wholesale produce distributor
         a.btn.btn-light.btn-lg(href='/Signup') Sign Up Now
