--- a/public/css/addproducesale.css
+++ b/public/css/addproducesale.css
@@ -9,7 +9,7 @@
 /* Styling the body and form */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f9;
+  background-image: url('../img/index4.jpg');
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,7 +18,7 @@ body {
 }
 
 form {
-  background-color: #fff;
+  background-color: rgba(42, 157, 143, 0.5);;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -28,7 +28,7 @@ form {
 
 h2 {
   text-align: center;
-  color: #333;
+  color: black;
   margin-bottom: 20px;
 }
 
@@ -36,7 +36,7 @@ label {
   display: block;
   margin-bottom: 8px;
   font-weight: bold;
-  color: #444;
+  color: black;
 }
 
 input[type="text"],
@@ -51,8 +51,8 @@ input[type="datetime-local"] {
 }
 
 button[type="submit"] {
-  background-color: #28a745;
-  color: #fff;
+  background-color: white;
+  color: black;
   padding: 12px;
   width: 100%;
   border: none;
@@ -63,7 +63,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #218838;
+  background-color: black;
 }
 
 /* Error message styling */
