--- a/public/css/directorsDashboard.css
+++ b/public/css/directorsDashboard.css
@@ -9,6 +9,7 @@ body {
       width: 250px;
       background-color: #264653;
       color: white;
+      font-size: 20px;
       height: 100vh;
       position: fixed;
       left: 0;
