--- a/views/addprocurement.pug
+++ b/views/addprocurement.pug
@@ -16,7 +16,7 @@ head
       select#produceType(name='produceType' required='')
         option(value='') Select type
         option(value='Grain') Grain
-        option(value='Cereal') Cereal
+        option(value='Legume') Legume
     .form-group
       label(for='tonnage') Tonnage (kgs)
       input#tonnage(type='number' name='tonnage')
