--- a/views/managersDashboard.pug
+++ b/views/managersDashboard.pug
@@ -68,10 +68,10 @@ html
             // Row 1
             .stat-box
               h3 Sales Today
-              p $2000
+              p 1000000ugx
             .stat-box
               h3 High Selling Product
-              p Soybeans
+              p Beans
               p 12
             .stat-box
               h3 Current products
@@ -81,9 +81,8 @@ html
             .stat-box
               h3 Low Stock Items
               ul
-                li Tomatoes – 5 units
-                li Onions – 3 units
-                li Milk – 2 bottles
+                li Soybeans – 50kgs
+                li Maize – 30 kgs
             .stat-box
               h3 Recent Activities
               ul
