--- a/views/register.pug
+++ b/views/register.pug
@@ -14,9 +14,8 @@ head
     label(for='type') Type:
     select#Type(name="type")
       option(value='') Select type
-      option(value='Beans') cereals
-      option(value='Maize') Legumes
-      option(value='Cowpeas') fruits
+      option(value='Grain') Grain
+      option(value='Legume') Legume
     span#Type.error
     label(for='quantity') Quantity:
     input#quantity(type='number' name="quantity" min='1')
