--- a/public/css/addprocurement.css
+++ b/public/css/addprocurement.css
@@ -63,22 +63,22 @@ body {
     outline: none;
   }
   
-  button[type="submit"] {
-    padding: 12px;
-    background-color: white ;
-    color: black;
-    font-size: 16px;
-    font-weight: bold;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    margin-top: 10px;
-    transition: background-color 0.3s;
+  .button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #4CAF50; /* Dodger Blue */
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
   }
   
-  button[type="submit"]:hover {
-    background-color: black ;
+  .button:hover {
+    background-color: #1c86ee; /* Slightly darker blue */
   }
+  
   
   .error {
     color: red;
